crates/forge_domain/src/snapshots/forge_domain__context__tests__update_image_tool_calls_no_tool_results.snap
---
source: crates/forge_domain/src/context.rs
expression: actual
---
messages:
  - id: "[id]"
    text:
      role: System
      content: System message
  - id: "[id]"
    text:
      role: User
      content: User message
  - id: "[id]"
    text:
      role: Assistant
      content: Assistant message
