crates/forge_domain/src/snapshots/forge_domain__context__tests__update_image_tool_calls_tool_results_no_images.snap
---
source: crates/forge_domain/src/context.rs
expression: actual
---
messages:
  - id: "[id]"
    text:
      role: System
      content: System message
  - id: "[id]"
    tool:
      name: text_tool
      call_id: call1
      output:
        is_error: false
        values:
          - text: Text output
  - id: "[id]"
    tool:
      name: empty_tool
      call_id: call2
      output:
        is_error: false
        values:
          - empty
